--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,25 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Lingua-EN-Inflect-Number
-version:      1.1
-version_from: Number.pm
-installdirs:  site
+---
+abstract: 'Force number of words to singular or plural'
+author:
+  - 'Simon Cozens <simon@cpan.org>'
+build_requires:
+  Test::More: '0'
+configure_requires:
+  ExtUtils::MakeMaker: '6.30'
+dynamic_config: 0
+generated_by: 'Dist::Zilla version 5.019, CPAN::Meta::Converter version 2.141170'
+license: perl
+meta-spec:
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: '1.4'
+name: Lingua-EN-Inflect-Number
 requires:
-    Lingua::EN::Inflect:           0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.21
+  Exporter: '0'
+  Lingua::EN::Inflect: '0'
+  perl: '5.006'
+  strict: '0'
+  warnings: '0'
+resources:
+  homepage: https://github.com/neilbowers/Lingua-EN-Inflect-Number
+  repository: https://github.com/neilbowers/Lingua-EN-Inflect-Number.git
+version: '1.11'
